[package]
name = "discord_bot"
version = "0.1.0"
authors = ["<ericpinter99@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
regex = "1.1.9"

serenity = "0.7.3"
reqwest ={version ="0.10.0-alpha.2", features=["blocking","json"]}
pest = "2.1.2"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
serde = {version="1.0.94", features=["derive"]}
serde_json = "1.0.39"