[package]
name = "discord_bot"
version = "0.1.0"
authors = ["<ericpinter99@gmail.com>"]
edition = "2018"

[dependencies]
rand = "^0.7.3"
regex = "^1.3.7"

serenity = "^0.8.6"
reqwest ={version ="^0.10.4", features=["blocking","json"]}
pest = "^2.1.3"
pest_derive = "^2.1.0"
lazy_static = "^1.4.0"
serde = {version="^1.0.110", features=["derive"]}
serde_json = "^1.0.53"